@@ -51,7 +51,7 @@
   <script src="../Api/new_api.js"/>
   <script src="prisme.js"/>
   <script src="../Mime/mime.js" />
-  <script src="keyring.js"/>
+  <script src="inline.js"/>
 
 </overlay>
 
